@@ -101,6 +101,16 @@ echo '<h2>' . "\n"
    .'</h2>' . "\n";
 
 /**
+ * Create new database.
+ */
+if ($cfg['ShowCreateDb']) {
+    echo '<ul><li id="li_create_database">' . "\n";
+    require './libraries/display_create_database.lib.php';
+    echo '    </li>' . "\n";
+    echo '</ul>' . "\n";
+}
+
+/**
  * Gets the databases list
  */
 if ($server > 0) {
@@ -267,16 +277,6 @@ if ($databases_count > 0) {
     echo __('No databases');
 }
 unset($databases_count);
-
-/**
- * Create new database.
- */
-if ($cfg['ShowCreateDb']) {
-    echo '<ul><li id="li_create_database">' . "\n";
-    require './libraries/display_create_database.lib.php';
-    echo '    </li>' . "\n";
-    echo '</ul>' . "\n";
-}
 
 /**
  * Sends the footer
